--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -11,7 +11,7 @@ published: true
   </div>
 
   <div class="date">
-    Written on {{ page.date | date: "%a %d %b %Y, %H:%M:%S" }}
+    Written on {{ page.date | date: "%a, %d %b %Y" }}
   </div>
 
   {% include disqus.html %}
