--- a/style.scss
+++ b/style.scss
@@ -279,12 +279,10 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $white;
+  background-color: $dimgray;
 }
 
 footer {
   padding: 20px 0;
   text-align: center;
 }
-
-
