--- a/style.scss
+++ b/style.scss
@@ -279,10 +279,11 @@ nav {
   margin-top: 50px;
   border-top: 1px solid #ddd;
   border-bottom: 1px solid #ddd;
-  background-color: $dimgray;
+  background-color: $black;
 }
 
 footer {
   padding: 20px 0;
   text-align: center;
+  background-color: $black;
 }
