--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -29,6 +29,7 @@
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
             <a href="{{ site.baseurl }}/about">Donations</a>
+            <a href="{{ site.baseurl }}/Donations">About</a>
           </nav>
         </header>
       </div>
