--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,8 +28,8 @@
 
           <nav>
             <a href="{{ site.baseurl }}/">Blog</a>
-            <a href="{{ site.baseurl }}/about">Donations</a>
-            <a href="{{ site.baseurl }}/Donations">About</a>
+            <a href="{{ site.baseurl }}/about">About</a>
+            <a href="{{ site.baseurl }}/Donations">Donations</a>
           </nav>
         </header>
       </div>
