--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
       <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
 
+    <script data-ad-client="ca-pub-5540346846223516" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js%22%3E</script>
+    
     <link rel="stylesheet" type="text/css" href="{{ site.baseurl }}/style.css" />
     <link rel="alternate" type="application/rss+xml" title="{{ site.name }} - {{ site.description }}" href="{{ site.baseurl }}/feed.xml" />
 
